# linux-0.11

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  README_8md.html  Trans_8cpp.html  Trans_8cpp.js  Trans_8cpp__incl.map  Trans_8cpp__incl.md5  Trans_8cpp_a062265139a91dbcba3c2da3e5161e56d_cgraph.map  Trans_8cpp_a062265139a91dbcba3c2da3e5161e56d_cgraph.md5  Trans_8cpp_a062265139a91dbcba3c2da3e5161e56d_icgraph.map  Trans_8cpp_a062265139a91dbcba3c2da3e5161e56d_icgraph.md5  Trans_8cpp_a1be3ada543282f099f3041460d0bf93a_cgraph.map  Trans_8cpp_a1be3ada543282f099f3041460d0bf93a_cgraph.md5  Trans_8cpp_a768bcafa217728f51684a2b6da748608_cgraph.map  Trans_8cpp_a768bcafa217728f51684a2b6da748608_cgraph.md5  Trans_8cpp_a768bcafa217728f51684a2b6da748608_icgraph.map  Trans_8cpp_a768bcafa217728f51684a2b6da748608_icgraph.md5  Trans_8cpp_aab2b64b09892d07b2b5c3c69d9760be8_cgraph.map  Trans_8cpp_aab2b64b09892d07b2b5c3c69d9760be8_cgraph.md5  Trans_8cpp_aab2b64b09892d07b2b5c3c69d9760be8_icgraph.map  Trans_8cpp_aab2b64b09892d07b2b5c3c69d9760be8_icgraph.md5  Trans_8cpp_source.html  annotated.html  annotated_dup.js  build_8c.html  build_8c.js  build_8c_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  build_8c_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  build_8c_a688d70b7ef30ea25cfd59d3c66a5a5ce_cgraph.map  build_8c_a688d70b7ef30ea25cfd59d3c66a5a5ce_icgraph.map  build_8c_a688d70b7ef30ea25cfd59d3c66a5a5ce_icgraph.md5  build_8c_ae8605e2b78cd4a81b6c6b5c30cb7366a_cgraph.map  build_8c_ae8605e2b78cd4a81b6c6b5c30cb7366a_cgraph.md5  build_8c_ae8605e2b78cd4a81b6c6b5c30cb7366a_icgraph.map  build_8c_ae8605e2b78cd4a81b6c6b5c30cb7366a_icgraph.md5  (+2679 more)
.github/workflows/: workflow.yml
boot/: Makefile  bootsect.map  bootsect.s  head.s  setup.map  setup.s  setup.sym  setup_old.s
cmake/: 3rd.cmake  add_header.cmake  compile_config.cmake  functions.cmake  gcc.cmake  project_config.cmake  x86_64-x86_64-gcc.cmake
doc/: CMakeLists.txt
flash/: README.md
flash/Bochs-2.3.6/docs/: index.html
flash/Bochs-2.3.6/docs/development/: about-the-code.html  add-keymapping.html  available-tools.html  cmos-map.html  coding.html  configure-scripting.html  cvs-release.html  debugger-advanced.html  debugger-commands.html  debugger-get-started.html  debugger-internals.html  debugger-techniques.html  debugger.html  directory-structure.html  emulator-objects.html  harddisk-redologs.html  index.html  instrumentation.html  iodebug.html  logfunctions.html  other-content.html  other.html  patches.html  repository.html  resources.html  sb16-emulation-basics.html  shell-access.html  site-update.html  sound-lowlovel-basics.html  svn-release.html  timers.html  trackers.html  update-online-docs.html  update-svn-snapshot.html  update-website.html  using-cvs-write-access.html  using-svn-write-access.html  webmastering.html
flash/Bochs-2.3.6/docs/documentation/: basics.html  conventions.html  index.html  layout.html  nsgmls.html  reading-writing.html  references.html
flash/Bochs-2.3.6/docs/user/: bios-tips.html  bochs-announce.html  bochs-cvs.html  bochs-linux-disktools.html  bochsrc.html  cirrus-notes.html  common-problems.html  compiling.html  config-tuntap.html  cpu-models.html  debugging-with-gdb.html  diskimagehowto.html  dlxlinux-networking.html  enter-special-keys.html  faq.html  features.html  feedback-support.html  get-src-cvs.html  get-src-svn.html  guest-dos.html  guest-freebsd.html  guest-freedos.html  guest-gnu.html  guest-knoppix.html  guest-minix.html  guest-openbsd.html  guest-osr5.html  guest-win2k-server.html  guest-win2k.html  guest-win7.html  guest-win95.html  guest-win98.html  guest-winme.html  guest-winnt4.html  guest-winxp.html  guests.html  harddisk-modes.html  howto.html  index.html  install-binary.html  (+36 more)
flash/Linux-0.11/fs/: bitmap.c  block_dev.c  buffer.c  char_dev.c
flash/Linux-0.11/include/: a.out.h  const.h
flash/Linux-0.11/kernel/blk_drv/: blk.h
flash/Linux-0.11/kernel/chr_drv/: console.c
flash/Linux-0.11/lib/: _exit.c  close.c
flash/Linux-0.11/tools/: build.c
fs/: Makefile  bitmap.c  block_dev.c  buffer.c  char_dev.c  exec.c  fcntl.c  file_dev.c  file_table.c  inode.c  ioctl.c  namei.c  open.c  pipe.c  read_write.c  stat.c  super.c  truncate.c
init/: main.c
kernel/: asm.s  exit.c  fork.c  mktime.c  panic.c  printk.c  sched.c  signal.c  sys.c  system_call.s  traps.c  vsprintf.c
kernel/blk_drv/: blk.h  floppy.c  hd.c  ll_rw_blk.c  ramdisk.c
kernel/chr_drv/: console.c  keyboard.S  rs_io.s  serial.c  tty_io.c  tty_ioctl.c
kernel/math/: math_emulate.c
lib/: Makefile  _exit.c
mm/: Makefile  memory.c  page.s
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+114 more)
src/: CMakeLists.txt
src/boot/: CMakeLists.txt  bootsect.s  bootsect.sym
src/fs/: CMakeLists.txt  bitmap.c  block_dev.c  buffer.c  char_dev.c  exec.c  fcntl.c  file_dev.c  file_table.c  inode.c  ioctl.c  namei.c  open.c  pipe.c  read_write.c  stat.c  super.c  truncate.c
src/init/: CMakeLists.txt  main.c
src/kernel/: CMakeLists.txt  exit.c  mktime.c  sched.c  sys.c  vsprintf.c
src/kernel/blk_drv/: hd.c  ll_rw_blk.c  ramdisk.c
src/kernel/chr_drv/: console.c  serial.c  tty_io.c
src/lib/: CMakeLists.txt  _exit.c  ctype.c  dup.c  execve.c  malloc.c  open.c  setsid.c  string.c  wait.c  write.c
src/mm/: CMakeLists.txt  memory.c
src/tools/: CMakeLists.txt  build.sh
tools/: build.c
